--- a/TODO
+++ b/TODO
@@ -18,5 +18,9 @@
 
 --DONE-- * The snake should be able to eat the food
 --DONE-- * The snake should grow upon eating the food
- * The game should keep score and or each time the snake eats the food the score should be updated.
- * The game should get over when the snake either touches itself or the borders.
+--DONE-- * The game should keep score and or each time the snake eats the food the score should be updated.
+--DONE-- * The game should get over when the snake either touches itself or the borders.
+
+ * Give the ghost snake the ability to eat the food.
+ * The game ends when your snake touches the ghost snake.
+ * Provide a special type of food that increases the score without changing the length of the snake.
