--- a/TODO
+++ b/TODO
@@ -23,4 +23,4 @@
 
 --DONE-- * Provide a special type of food that increases the score without changing the length of the snake.
 --DONE-- * Give the ghost snake the ability to eat the food.
- * The game ends when your snake touches the ghost snake.
+--DONE-- * The game ends when your snake touches the ghost snake.
